force-app/main/default/objects/Spread_Path_Result__c/Spread_Path_Result__c.object-meta.xml
<CustomObject>
    <description>Measured spreading result for one comparison path against one normalized spread line.</description>
    <label>Spread Path Result</label>
    <nameField>
        <displayFormat>SPR-{000000}</displayFormat>
        <label>Spread Path Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Path Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>