force-app/main/default/objects/Spread_Path_Result__c/fields/Baseline_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Minutes__c</fullName>
    <label>Baseline Minutes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>