force-app/main/default/objects/Spread_Path_Result__c/fields/Candidate_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Minutes__c</fullName>
    <label>Candidate Minutes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>