force-app/main/default/objects/Spread_Path_Result__c/fields/Candidate_Value__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Value__c</fullName>
    <label>Candidate Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>