force-app/main/default/objects/Spread_Path_Result__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <label>Certification Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>