force-app/main/default/objects/Spread_Path_Result__c/fields/Certified_At__c.field-meta.xml
<CustomField>
    <fullName>Certified_At__c</fullName>
    <label>Certified At</label>
    <type>DateTime</type>
</CustomField>