force-app/main/default/objects/Spread_Path_Result__c/fields/Certified_By__c.field-meta.xml
<CustomField>
    <fullName>Certified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Certified Path Results</relationshipLabel>
    <relationshipName>Certified_Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>