force-app/main/default/objects/Spread_Path_Result__c/fields/Manual_Value__c.field-meta.xml
<CustomField>
    <fullName>Manual_Value__c</fullName>
    <label>Manual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>