force-app/main/default/objects/Spread_Path_Result__c/fields/Path_Key__c.field-meta.xml
<CustomField>
    <fullName>Path_Key__c</fullName>
    <label>Path Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>