force-app/main/default/objects/Spread_Path_Result__c/fields/Primary_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Primary_Evidence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Evidence</label>
    <referenceTo>Spread_Extraction_Evidence__c</referenceTo>
    <relationshipLabel>Path Results</relationshipLabel>
    <relationshipName>Evidence_Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>