force-app/main/default/objects/Spread_Path_Result__c/fields/Raw_Label__c.field-meta.xml
<CustomField>
    <fullName>Raw_Label__c</fullName>
    <label>Raw Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>