force-app/main/default/objects/Spread_Path_Result__c/fields/Raw_Value__c.field-meta.xml
<CustomField>
    <fullName>Raw_Value__c</fullName>
    <label>Raw Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>