force-app/main/default/objects/Spread_Path_Result__c/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <label>Reviewed At</label>
    <type>DateTime</type>
</CustomField>