force-app/main/default/objects/Spread_Path_Result__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Path Results</relationshipLabel>
    <relationshipName>Reviewed_Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>