force-app/main/default/objects/Spread_Path_Result__c/fields/Reviewed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Reason__c</fullName>
    <label>Reviewed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>