force-app/main/default/objects/Spread_Path_Result__c/fields/Spread_Document__c.field-meta.xml
<CustomField>
    <fullName>Spread_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spread Document</label>
    <referenceTo>Spread_Document__c</referenceTo>
    <relationshipLabel>Path Results</relationshipLabel>
    <relationshipName>Document_Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>