force-app/main/default/objects/Spread_Path_Result__c/fields/Spread_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Spread_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spread Line Item</label>
    <referenceTo>Spread_Line_Item__c</referenceTo>
    <relationshipLabel>Path Results</relationshipLabel>
    <relationshipName>Path_Results</relationshipName>
    <type>Lookup</type>
</CustomField>