force-app/main/default/objects/Spread_Path_Result__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <formula>IF(
    ISBLANK(Manual_Value__c),
    NULL,
    Manual_Value__c - BLANKVALUE(Candidate_Value__c, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>