force-app/main/default/objects/Spread_Path_Result__c/fields/Variance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Variance_Pct__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Manual_Value__c),
        Manual_Value__c = 0
    ),
    NULL,
    (Manual_Value__c - BLANKVALUE(Candidate_Value__c, 0)) / Manual_Value__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>